Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10328

Error when calling destroy() in 'dynamic' example

XMLWordPrintable

    • f82a929a9f896b73e25b06f5eb4cf1a313dce60a

      The default "Arbitrary QML" code in the dynamic example calls "smile.destroy(1000)". If "Create" is clicked with this default code left in place, this error is triggered:

      file:///Users/bealam/depot/qt/qt-qml/examples/declarative/dynamic/CustomObject:10: Error: Invalid attempt to destroy() an indestructible object

      I noticed this is fixed if createQmlObject() is changed so that QDeclarativeDataPrivate::setImplicitDestructible() is called before QDeclarativeComponent::completeCreate(), as per the attached patch, but this causes other breakages in the qdeclarativelanguage unit test.

        1. qdeclarativeengine.patch
          1 kB
          Bea Lam (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            bealam Bea Lam (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes