Allow dynamic deletion of objects created with createQmlObject

Task-number: QTBUG-10328